<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ronan.bikepro.Fragments.RegisterFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/register_new_bike_here"
            android:textStyle="bold" />


        <!-- Image Upload area-->
        <LinearLayout
            android:id="@+id/container_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_shadow"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingRight="16dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textView7"
                style="@style/CategoryStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="10dp"
                android:text="@string/image"
                android:textColor="@color/bikeHeadings" />


            <ImageView
                android:id="@+id/upload_image"
                android:layout_width="240dp"
                android:layout_height="100dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/uploadimage" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:clickable="true"
                app:backgroundTint="#B2EBF2"
                app:borderWidth="5dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_camera_enhance_black_24dp" />

            <!--end upload area-->
        </LinearLayout>

        <!--main body area-->
        <LinearLayout
            android:id="@+id/container_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_shadow"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="20dp">

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="4dp">


                <!-- Label -->
                <TextView
                    android:id="@+id/textView"
                    style="@style/CategoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/bike_details"
                    android:textColor="@color/bikeHeadings" />


            </LinearLayout>


            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingRight="16dp">


                <!-- make field -->
                <EditText
                    android:id="@+id/edit_bike_make"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/make_hint" />

                <!-- make field -->
                <EditText
                    android:id="@+id/edit_bike_model"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/model_hint" />

                <!-- color field -->
                <EditText
                    android:id="@+id/edit_bike_colour"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/colour_hint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- size field -->
                    <EditText
                        android:id="@+id/edit_bike_size"
                        style="@style/EditorFieldStyle"
                        android:layout_width="0dp"
                        android:layout_weight="2.4"
                        android:hint="@string/frame_size_hint"
                        android:inputType="number" />


                    <ImageView
                        android:id="@+id/infoSize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:src="@drawable/ic_info_outline_black_24dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- UUID field -->
                    <EditText
                        android:id="@+id/edit_bike_UUID"
                        style="@style/EditorFieldStyle"
                        android:layout_width="0dp"
                        android:layout_weight="2.4"
                        android:hint="@string/beacon_id_hint" />


                    <ImageView
                        android:id="@+id/infoUUID"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:src="@drawable/ic_info_outline_black_24dp" />

                </LinearLayout>

                <!-- other field -->
                <EditText
                    android:id="@+id/edit_othe_features"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/other_features" />


            </LinearLayout>
        </LinearLayout>


        <!-- add bike -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="32dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            app:backgroundTint="#00CD00"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_done_all_black_24dp" />


    </LinearLayout>
</FrameLayout>
