<resources>
    <string name="app_name">Bike Pro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="clear_data">Clear User Data</string>


    <!--firebase-->
...
    <string name="bike_detais"><u>Bike Detais</u></string>
    <string name="owner_details"><u>Owner Details</u></string>
    <string name="aproximate_distance"><u>Aproximate Distance</u></string>
    <string name="sign_in_heading">Please sign in or create a new account if this is your first time here</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in_btn">sign in</string>
    <string name="create_account_btn">create account</string>
    <string name="signed_out_status">signed_out</string>
    <string name="bike_managment">Bike Managment</string>
    <string name="home_screen">Home Screen</string>
    <string name="my_bikes">My Bikes</string>
    <string name="register_bike">Register Bike</string>
    <string name="edit_bike">Edit Bike</string>
    <string name="theft_data">Theft Data</string>
    <string name="view_stolen_database">View Stolen Database</string>
    <string name="theft_map_analytics">Theft Map Analytics</string>
    <string name="link_to_bike">Link To Bike</string>
    <string name="theft_prevention">Theft Prevention</string>
...
